--- a/index.html
+++ b/index.html
@@ -6,8 +6,31 @@
   <title></title>
 </head>
 <body>
-  <header class="main-header">
-    
+  <header class="header">
+    <div class="container">
+    <div class="row main-header">
+        <div class="logo col-lg-8">
+          <h2>Dopetrope</h2>
+        </div>
+        <div class="menu col-lg-8">
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>Dropdown</li>
+              <li>Left Sidebar</li>
+              <li>Right Sidebar</li>
+              <li>No Sidebar</li>
+            </ul>
+          </nav>
+        </div>
+    </div>
+    <div class="row banner">
+        <div class="banner-item col-lg-8">
+          <h2>Howdy.This is Dopetrope</h2>
+          <p>A responsive template by HTML5 UP</p>
+        </div>
+    </div>
+</div>
   </header>
   <div class="options">
 
