--- a/index.html
+++ b/index.html
@@ -12,9 +12,49 @@
   <div class="options">
 
   </div>
-  <div class="portfolio">
-    
-  </div>
+  <section class="portfolio">
+    <div class="container">
+        <div class="row">
+           <h2>My portfolio</h2>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic02.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic03.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic04.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic05.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic06.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+            <div class="portfoio__item col-md-4">
+                <img src="./img/pic02.jpg" alt="">
+                <h3>Lorem ipsum dolor sit.</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                <a href="">Find out more</a>
+            </div>
+        </div>
+    </div>
+  </section>
   <div class="blog">
     
   </div>
