небольшие изменеия в хэдере

--- a/index.html
+++ b/index.html
@@ -6,32 +6,36 @@
   <title>Dropetrope</title>
 </head>
 <body>
-  <header class="header">
+ <header class="header">
     <div class="container">
     <div class="row main-header">
         <div class="logo col-lg-8">
-          <h2>Dopetrope</h2>
+          <h1>Dopetrope</h1>
         </div>
         <div class="menu col-lg-8">
           <nav>
             <ul>
-              <li>Home</li>
-              <li>Dropdown</li>
-              <li>Left Sidebar</li>
-              <li>Right Sidebar</li>
-              <li>No Sidebar</li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Dropdown</a></li>
+              <li><a href="">Left Sidebar</a></li>
+              <li><a href="">Right Sidebar</a></li>
+              <li><a href="">No Sidebar</a></li>
             </ul>
           </nav>
         </div>
     </div>
-    <div class="row banner">
+    </div>
+</header>
+   <section class="banner">
+    <div class="container">
+    <div class="row">
         <div class="banner-item col-lg-8">
           <h2>Howdy.This is Dopetrope</h2>
           <p>A responsive template by HTML5 UP</p>
         </div>
     </div>
 </div>
-  </header>
+  </section>
   <div class="options">
 
   </div>
