--- a/index.html
+++ b/index.html
@@ -39,22 +39,27 @@
     
   </div>
   <div class="blog">
-    <div class="container-fluid">
-      <div class="blog__left">
-        <img src="img/pic08.jpg">
-        <h3>Magna tempus consequat lorem</h3>
-        <u>Posted 45 minutes ago</u>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto inventore iusto, omnis error nam pariatur eligendi nemo iste reprehenderit ea possimus rem explicabo dolorem, dicta rerum delectus et natus. Iste.</p>
-        <a class="btn__red" href="">Continue Reading</a>
-        <a class="btn__black" href="">33 comments</a>
+    <div class="container">
+      <h2>The Blog</h2>
+      <div class="blog__left col-lg-6">
+        <div class="blog__left--item">
+          <img src="img/pic08.jpg">
+          <h3>Magna tempus consequat lorem</h3>
+          <u>Posted 45 minutes ago</u>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto inventore iusto, omnis error nam pariatur eligendi nemo iste reprehenderit ea possimus rem explicabo dolorem, dicta rerum delectus et natus. Iste.</p>
+          <a class="btn btn__red" href="">Continue Reading</a>
+          <a class="btn btn__black" href="">33 comments</a>
+        </div>
       </div>
-      <div class="blog__right">
-        <img src="img/pic09.jpg">
-        <h3>Aptent veroeros et aliquam</h3>
-        <u>Posted 45 minutes ago</u>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet necessitatibus asperiores laboriosam dolore maiores culpa vel numquam, ipsam, dolorem, praesentium vitae. Fugit voluptate neque totam, necessitatibus eum deleniti libero eveniet.</p>
-        <a class="btn__red" href="">Continue Reading</a>
-        <a class="btn__black" href="">33 comments</a>
+      <div class="blog__right col-lg-6">
+        <div class="blog__right--item">
+          <img src="img/pic09.jpg">
+          <h3>Aptent veroeros et aliquam</h3>
+          <u>Posted 45 minutes ago</u>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet necessitatibus asperiores laboriosam dolore maiores culpa vel numquam, ipsam, dolorem, praesentium vitae. Fugit voluptate neque totam, necessitatibus eum deleniti libero eveniet.</p>
+          <a class="btn btn__red" href="">Continue Reading</a>
+          <a class="btn btn__black" href="">33 comments</a>
+        </div>
       </div>
     </div>
   </div>
