--- a/index.html
+++ b/index.html
@@ -39,41 +39,41 @@
     <div class="container">
         <div class="row">
            <h2>My portfolio</h2>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic02.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic03.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic04.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic05.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic06.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
-            <div class="portfoio__item col-md-4">
+            <div class="portfolio__item col-md-4">
                 <img src="./img/pic02.jpg" alt="">
                 <h3>Lorem ipsum dolor sit.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a href="">Find out more</a>
+                <a class="btn" href="">Find out more</a>
             </div>
         </div>
     </div>
