final location of main-header,clear the col-8

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </div>
 </header>
    <section class="banner">
-    <div class="container">
+    <div class="container banner-cut">
     <div class="row">
-        <div class="banner-item col-lg-8">
+        <div class="banner-item col-lg-4">
           <h2>Howdy.This is Dopetrope</h2>
           <p>A responsive template by HTML5 UP</p>
         </div>
