Added dates section to main-footer

--- a/index.html
+++ b/index.html
@@ -18,8 +18,50 @@
   <div class="blog">
     
   </div>
-  <div class="main-footer">
-    
-  </div>
+  <footer class="main-footer">
+    <div class="container">
+      <div class="dates">
+        <h2>Blandit nisl adipiscing</h2>
+        <date>
+          <div class="number-wrap">
+            <div class="number">
+              <span class="number__month"></span>
+              <span class="number__day"></span>
+            </div>
+          </div>
+          <h3>Lorem dolor sit amet veroeros</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, repudiandae.</p>
+        </date>
+        <date>
+          <div class="number-wrap">
+            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
+          </div>
+          <h3>Lorem dolor sit amet veroeros</h3>
+          <p>Deleniti, ex commodi mollitia laudantium unde sint fugit quis voluptatem.</p>
+        </date>
+        <date>
+          <div class="number-wrap">
+            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
+          </div>
+          <h3>Lorem dolor sit amet veroeros</h3>
+          <p>Sapiente recusandae deserunt, autem, consectetur dolore ipsa facere fuga labore.</p>
+        </date>
+        <date>
+          <div class="number-wrap">
+            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
+          </div>
+          <h3>Lorem dolor sit amet veroeros</h3>
+          <p>Pariatur sint nobis explicabo, at molestias, dolores corporis excepturi maxime.</p>
+        </date>
+        <date>
+          <div class="number-wrap">
+            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
+          </div>
+          <h3>Lorem dolor sit amet veroeros</h3>
+          <p>Tempora cupiditate fuga nostrum iusto neque laborum maxime ipsum repellendus!</p>
+        </date>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
