--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
  <header class="header">
     <div class="container">
     <div class="row main-header">
-        <div class="logo col-lg-8">
+        <div class="logo">
           <h1>Dopetrope</h1>
         </div>
-        <div class="menu col-lg-8">
+        <div class="menu">
           <nav>
             <ul>
               <li><a href="">Home</a></li>
