--- a/index.html
+++ b/index.html
@@ -20,46 +20,24 @@
   </div>
   <footer class="main-footer">
     <div class="container">
-      <div class="dates">
-        <h2>Blandit nisl adipiscing</h2>
-        <date>
-          <div class="number-wrap">
-            <div class="number">
-              <span class="number__month"></span>
-              <span class="number__day"></span>
+      <div class="row">
+        <div class="col-md-7 dates">
+          <h2 class="main-footer__caption">Blandit nisl adipiscing</h2>
+          <div class="date">
+            <div class="row">
+              <div class="col-xs-2 number-wrap">
+                <div class="number triangle-right">
+                  <span class="number__month">Jan</span>
+                  <span class="number__day">27</span>
+                </div>
+              </div>
+              <div class="col-xs-10 info">
+                <h3 class="info__caption">Lorem dolor sit amet veroeros</h3>
+                <p class="info__message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, repudiandae.</p>
+              </div>
             </div>
           </div>
-          <h3>Lorem dolor sit amet veroeros</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, repudiandae.</p>
-        </date>
-        <date>
-          <div class="number-wrap">
-            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
-          </div>
-          <h3>Lorem dolor sit amet veroeros</h3>
-          <p>Deleniti, ex commodi mollitia laudantium unde sint fugit quis voluptatem.</p>
-        </date>
-        <date>
-          <div class="number-wrap">
-            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
-          </div>
-          <h3>Lorem dolor sit amet veroeros</h3>
-          <p>Sapiente recusandae deserunt, autem, consectetur dolore ipsa facere fuga labore.</p>
-        </date>
-        <date>
-          <div class="number-wrap">
-            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
-          </div>
-          <h3>Lorem dolor sit amet veroeros</h3>
-          <p>Pariatur sint nobis explicabo, at molestias, dolores corporis excepturi maxime.</p>
-        </date>
-        <date>
-          <div class="number-wrap">
-            <div class="number"><span class="number__month"></span><span class="number__day"></span></div>
-          </div>
-          <h3>Lorem dolor sit amet veroeros</h3>
-          <p>Tempora cupiditate fuga nostrum iusto neque laborum maxime ipsum repellendus!</p>
-        </date>
+        </div>
       </div>
     </div>
   </footer>
