--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
  <header class="header">
     <div class="container">
     <div class="row main-header">
-        <div class="logo col-lg-8">
+        <div class="logo">
           <h1>Dopetrope</h1>
         </div>
-        <div class="menu col-lg-8">
+        <div class="menu ">
           <nav>
             <ul>
               <li><a href="">Home</a></li>
@@ -29,7 +29,7 @@
    <section class="banner">
     <div class="container banner-cut">
     <div class="row">
-        <div class="banner-item col-lg-4">
+        <div class="banner-item ">
           <h2>Howdy.This is Dopetrope</h2>
           <p>A responsive template by HTML5 UP</p>
         </div>
