--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <section class="banner">
     <div class="container banner-cut">
     <div class="row">
-        <div class="banner-item col-lg-4">
+        <div class="banner-item">
           <h2>Howdy.This is Dopetrope</h2>
           <p>A responsive template by HTML5 UP</p>
         </div>
@@ -102,8 +102,8 @@
             <h3>Aptent veroeros et aliquam</h3>
             <u>Posted 45 minutes ago</u>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet necessitatibus asperiores laboriosam dolore maiores culpa vel numquam, ipsam, dolorem, praesentium vitae. Fugit voluptate neque totam, necessitatibus eum deleniti libero eveniet.</p>
-            <a class="btn btn__red" href="">Continue Reading</a>
-            <a class="btn btn__black" href="">33 comments</a>
+            <a class="btn btn__red" href=""><i class="fa fa-file-text-o"></i>Continue Reading</a>
+            <a class="btn btn__black" href=""><i class="fa fa-comments-o fa-5x"></i>33 comments</a>
           </div>
         </div>
       </div>
