--- a/index.html
+++ b/index.html
@@ -45,39 +45,51 @@
            <h2>My portfolio</h2>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic02.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic03.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic04.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic05.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic06.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic02.jpg" alt="">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                <a class="btn btn__black" href="">Find out more</a>
+               <img src="./img/pic07.jpg" alt="">
+                <div class="portfolio__item__content">
+                    <h3>Lorem ipsum dolor sit.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <button class="btn btn__black">Find out more</button>
+                </div>
             </div>
         </div>
     </div>
