исправление стилей кнопок

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
@@ -55,7 +55,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
@@ -63,7 +63,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
@@ -71,7 +71,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
@@ -79,7 +79,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
@@ -87,7 +87,7 @@
                 <div class="portfolio__item__content">
                     <h3>Lorem ipsum dolor sit.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
-                    <button class="btn btn__black">Find out more</button>
+                    <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
         </div>
