style block blog(button)

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <img src="img/pic08.jpg">
             <h3>Magna tempus consequat lorem</h3>
             <u>Posted 45 minutes ago</u>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto inventore iusto, omnis error nam pariatur eligendi nemo iste reprehenderit ea possimus rem explicabo dolorem, dicta rerum delectus et natus. Iste.</p>
-            <button class="btn btn__red" href=""><i class="fa fa-file-text-o fa-2x"></i>Continue Reading</button>
-            <button class="btn btn__black" href=""><i class="fa fa-commenting-o fa-2x"></i>33 comments</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet necessitatibus asperiores laboriosam dolore maiores culpa vel numquam, ipsam, dolorem, praesentium vitae. Fugit voluptate neque totam, necessitatibus eum deleniti libero eveniet.</p>
+            <button class="btn btn__red" href=""><i class="fa fa-file-text-o fa-lg"></i>Continue Reading</button>
+            <button class="btn btn__black" href=""><i class="fa fa-commenting-o fa-lg"></i>33 comments</button>
           </div>
         </div>
         <div class="blog__right col-lg-6">
@@ -113,8 +113,8 @@
             <h3>Aptent veroeros et aliquam</h3>
             <u>Posted 45 minutes ago</u>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet necessitatibus asperiores laboriosam dolore maiores culpa vel numquam, ipsam, dolorem, praesentium vitae. Fugit voluptate neque totam, necessitatibus eum deleniti libero eveniet.</p>
-            <button class="btn btn__red" href=""><i class="fa fa-file-text-o fa-2x"></i>Continue Reading</button>
-            <button class="btn btn__black" href=""><i class="fa fa-commenting-o fa-2x"></i>33 comments</button>
+            <button class="btn btn__red" href=""><i class="fa fa-file-text-o fa-lg"></i>Continue Reading</button>
+            <button class="btn btn__black" href=""><i class="fa fa-commenting-o fa-lg"></i>33 comments</button>
           </div>
         </div>
       </div>
