--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container banner-cut">
     <div class="row">
         <div class="banner-item">
-          <h2>Howdy.This is Dopetrope</h2>
+          <h2 class="caption">Howdy.This is Dopetrope</h2>
           <p>A responsive template by HTML5 UP</p>
         </div>
     </div>
