--- a/index.html
+++ b/index.html
@@ -41,52 +41,52 @@
   <section class="portfolio">
     <div class="container">
         <div class="row">
-           <h2>My portfolio</h2>
+           <h2 class="portfolio__caption--main">My portfolio</h2>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic02.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic03.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic04.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic05.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
                 <img src="./img/pic06.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
                <img src="./img/pic07.jpg" alt="">
                 <div class="portfolio__item__content">
-                    <h3>Lorem ipsum dolor sit.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
+                    <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
+                    <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
                     <a class="btn btn__black" href="#">Find out more</a>
                 </div>
             </div>
