--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
            <h2 class="portfolio__caption--main">My portfolio</h2>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic02.jpg" alt="">
+                <img class="portfolio__image" src="./img/pic02.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic03.jpg" alt="">
+                <img class="portfolio__image" src="./img/pic03.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic04.jpg" alt="">
+                <img class="portfolio__image" src="./img/pic04.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic05.jpg" alt="">
+                <img class="portfolio__image" src="./img/pic05.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
-                <img src="./img/pic06.jpg" alt="">
+                <img class="portfolio__image" src="./img/pic06.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="portfolio__item col-md-4">
-               <img src="./img/pic07.jpg" alt="">
+               <img class="portfolio__image" src="./img/pic07.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
                     <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quaerat suscipit dolor eos quasi corporis, obcaecati doloremque libero consequatur delectus, dolores voluptas atque.</p>
