Уходит хэдер идеальный как сиська моей бывшей

--- a/index.html
+++ b/index.html
@@ -10,28 +10,26 @@
     <div class="container">
     <div class="row main-header">
         <div class="logo">
-          <h1>Dopetrope</h1>
+          <h1 class="caption1">Dopetrope</h1>
         </div>
-        <div class="menu ">
-        <nav>
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Dropdown</a></li>
-              <li><a href="">Left Sidebar</a></li>
-              <li><a href="">Right Sidebar</a></li>
-              <li><a href="">No Sidebar</a></li>
+          <nav class="main-nav">
+            <ul class="clearfix">
+              <li class="main-nav__nav-item"><a class="active" href="#index.html">Home</a></li>
+              <li class="main-nav__nav-item"><a href="">Dropdown</a></li>
+              <li class="main-nav__nav-item"><a href="">Left Sidebar</a></li>
+              <li class="main-nav__nav-item"><a href="">Right Sidebar</a></li>
+              <li class="main-nav__nav-item"><a href="">No Sidebar</a></li>
             </ul>
-          </nav>
-        </div>
+        </nav>
     </div>
     </div>
 </header>
    <section class="banner">
-    <div class="container banner-cut">
+    <div class="container">
     <div class="row">
         <div class="banner-item">
-          <h2 class="caption">Howdy.This is Dopetrope</h2>
-          <p>A responsive template by HTML5 UP</p>
+          <h2 class="caption2">Howdy.This is Dopetrope</h2>
+          <p class="banner-text">A responsive template by HTML5 UP</p>
         </div>
     </div>
 </div>
