--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
               <img src="./img/pic10.jpg" alt="">
             </div>
             <p class="thumbnail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident perspiciatis aliquid earum sit, a!</p>
+            <button class="btn btn__red">Find out more</button>
           </div>
         </div>
       </div>
