--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   <section class="portfolio">
     <div class="container">
         <div class="row">
+          <div class="portfolio__border">
            <h2 class="portfolio__caption--main">My portfolio</h2>
+            </div>
             <div class="portfolio__item col-md-4">
                 <img class="portfolio__image" src="./img/pic02.jpg" alt="">
                 <div class="portfolio__item__content">
