border-top для blog

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   </div>
   <section class="portfolio">
     <div class="container">
-        <div class="row">
           <div class="portfolio__border">
            <h2 class="portfolio__caption--main">My portfolio</h2>
             </div>
+        <div class="row">
             <div class="portfolio__item col-md-4">
                 <img class="portfolio__image" src="./img/pic02.jpg" alt="">
                 <div class="portfolio__item__content">
@@ -95,7 +95,9 @@
   </section>
   <div class="blog">
     <div class="container">
-      <h2>The Blog</h2>
+     <div class="blog__border">
+       <h2 class="blog__caption--main">The Blog</h2>
+     </div>
       <div class="row">
         <div class="blog__left col-lg-6">
           <div class="blog__left--item">
