изменение толщины шрифта

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2 class="portfolio__caption--main">My portfolio</h2>
         </div>
         <div class="row">
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12 ">
                 <img class="portfolio__image" src="./img/pic02.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
@@ -77,7 +77,7 @@
                     <button class="btn btn__black" href="#">Find out more</button>
                 </div>
             </div>
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12">
                 <img class="portfolio__image" src="./img/pic03.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
@@ -85,7 +85,7 @@
                     <button class="btn btn__black" href="#">Find out more</button>
                 </div>
             </div>
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12">
                 <img class="portfolio__image" src="./img/pic04.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
@@ -93,7 +93,7 @@
                     <button class="btn btn__black" href="#">Find out more</button>
                 </div>
             </div>
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12">
                 <img class="portfolio__image" src="./img/pic05.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
@@ -101,7 +101,7 @@
                     <button class="btn btn__black" href="#">Find out more</button>
                 </div>
             </div>
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12">
                 <img class="portfolio__image" src="./img/pic06.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
@@ -109,7 +109,7 @@
                     <button class="btn btn__black" href="#">Find out more</button>
                 </div>
             </div>
-            <div class="portfolio__item col-md-4">
+            <div class="portfolio__item col-md-4 col-sm-6 col-xs-12">
                <img class="portfolio__image" src="./img/pic07.jpg" alt="">
                 <div class="portfolio__item__content">
                     <h3 class="portfolio__caption">Lorem ipsum dolor sit.</h3>
