--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="row">
         <div class="banner-item">
-          <h2 class="caption2">Howdy.This is Dopetrope</h2>
+          <h2 class="caption2">Howdy. This is Dopetrope.</h2>
           <p class="banner-text">A responsive template by HTML5 UP</p>
         </div>
       </div>
