Add footer-copyright to html

--- a/index.html
+++ b/index.html
@@ -241,6 +241,18 @@
         </div>
       </div>
     </div>
+    <footer class="copyright">
+      <div class="copyright-wrap">
+        <div class="copyright-content">
+          <span class="copyright__item">
+            &copy; Untitled. All rights reseved.
+          </span>
+          <span class="copyright__item">
+            Design: <a class="underline color--white" href="">HTML5 UP</a>
+          </span>
+        </div>
+      </div>
+    </footer>
   </footer>
 </body>
 </html>
