finish style options

--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 <div class="options">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 options__menu">
+      <div class="col-lg-4 options__menu box-left">
         <div class="options__menu--block1 triangle-bottom">
           <i class="fa fa-cog fa-5x"></i>
         </div>
         <h2>Ipsum consequat</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
-      <div class="col-lg-4 options__menu">
-        <div class="options__menu--block1 triangle-bottom">
-          <i class="fa fa-cog fa-5x"></i>
+      <div class="col-lg-4 options__menu box">
+        <div class="options__menu--block2 triangle-bottom1">
+          <i class="fa fa-bolt fa-5x"></i>
         </div>
-        <h2>Ipsum consequat</h2>
+        <h2>Magna etimal dollor</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
-      <div class="col-lg-4 options__menu">
-        <div class="options__menu--block1 triangle-bottom">
-          <i class="fa fa-cog fa-5x"></i>
+      <div class="col-lg-4 options__menu box-right">
+        <div class="options__menu--block3 triangle-bottom2">
+          <i class="fa fa-star-o fa-5x"></i>
         </div>
-        <h2>Ipsum consequat</h2>
+        <h2>Tempus consequat</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       </div>
     </div>
