--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
  <header class="header">
     <div class="container">
-    <div class="row main-header">
-        <div class="logo">
+    <div class="row main-header col-xs-2 col-sm-12">
+        <div class="logo ">
           <h1 class="caption1">Dopetrope</h1>
         </div>
           <nav class="main-nav">
@@ -27,9 +27,9 @@
 <section class="banner">
   <div class="container">
     <div class="row">
-        <div class="banner-item">
+        <div class="banner-item col-xs-12 col-sm-12">
           <h2 class="caption2">Howdy. This is Dopetrope.</h2>
-          <p class="banner-text">A responsive template by HTML5 UP</p>
+          <p class=" banner-text">A responsive template by HTML5 UP</p>
         </div>
       </div>
   </div>
@@ -37,7 +37,7 @@
 <div class="options">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4 options__menu">
+      <div class="col-lg-4  options__menu">
         <div class="options__menu--block1 triangle-bottom">
           <i class="fa fa-cog fa-5x"></i>
         </div>
