final preparation for deploy

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
  <header class="header">
     <div class="container">
-    <div class="row main-header col-xs-2 col-sm-12">
+    <div class="row main-header">
         <div class="logo ">
           <h1 class="caption1">Dopetrope</h1>
         </div>
           <nav class="main-nav">
             <ul class="clearfix">
-              <li class="main-nav__nav-item"><a class="active" href="#index.html">Home</a></li>
+              <li class="main-nav__nav-item "><a class="main-nav__nav-item--active" href="#index.html">Home</a></li>
               <li class="main-nav__nav-item"><a href="">Dropdown</a></li>
               <li class="main-nav__nav-item"><a href="">Left Sidebar</a></li>
               <li class="main-nav__nav-item"><a href="">Right Sidebar</a></li>
@@ -28,7 +28,7 @@
 <section class="banner">
   <div class="container">
     <div class="row">
-        <div class="banner-item col-xs-12 col-sm-12">
+        <div class="banner-item">
           <h2 class="caption2">Howdy. This is Dopetrope.</h2>
           <p class=" banner-text">A responsive template by HTML5 UP</p>
         </div>
