--- a/index.html
+++ b/index.html
@@ -242,6 +242,42 @@
         </div>
       </div>
     </div>
+    <section class="contacts">
+      <div class="container">
+          <div class="contacts__info">
+            <div class="col-lg-4 contacts__info--navigation">
+              <h3>Links to Stuff</h3>
+              <ul>
+                <li><a href="">Lorem ipsum</a></li>
+                <li><a href="">Duis neque nisi</a></li>
+                <li><a href="">apibus sed mattis</a></li>
+                <li><a href="">et quis, nibh.</a></li>
+                <li><a href="">Sed et dapidus </a></li>
+                <li><a href="">isl amet mattis</a></li>
+                <li><a href="">ed a rytrum</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-4 contacts__info--navigation">
+              <h3>More links to Stuff</h3>
+              <ul>
+                <li><a href="">accumsan sed. S</a></li>
+                <li><a href="">uis neque nisi, </a></li>
+                <li><a href="">apibus sed mattis et quis, </a></li>
+                <li><a href="">nibh. Sed et dapidus</a></li>
+                <li><a href="">nisl amet mattis</a></li>
+                <li><a href="">utrum accumsan sed</a></li>
+                <li><a href="">utrum accumsan sed</a></li>
+              </ul>
+            </div>
+            <div class="contacts__social">
+              <a href="" class="fa fa-twitter fa-3x"></a>
+              <a href="" class="fa fa-facebook fa-3x"></a>
+              <a href="" class="fa fa-github fa-3x"></a>
+              <a href="" class="fa fa-linkedin-square fa-3x"></a>
+              <a href="" class="fa fa-google-plus fa-3x"></a>
+            </div>
+          </div>
+        </section>
     <footer class="copyright">
       <div class="copyright-wrap">
         <div class="copyright-content">
