Upd html (footer)

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="container">
           <div class="contacts__info">
             <div class="col-lg-4 contacts__info--navigation">
-              <h3>Links to Stuff</h3>
+              <h2 class="main-footer__caption">Links to Stuff</h2>
               <ul>
                 <li><a href="">Lorem ipsum</a></li>
                 <li><a href="">Duis neque nisi</a></li>
@@ -258,7 +258,7 @@
               </ul>
             </div>
             <div class="col-lg-4 contacts__info--navigation">
-              <h3>More links to Stuff</h3>
+              <h2 class="main-footer__caption">More links to Stuff</h2>
               <ul>
                 <li><a href="">accumsan sed. S</a></li>
                 <li><a href="">uis neque nisi, </a></li>
@@ -277,7 +277,8 @@
               <a href="" class="fa fa-google-plus fa-3x"></a>
             </div>
           </div>
-        </section>
+      </div>
+      </section>
     <footer class="copyright">
       <div class="copyright-wrap">
         <div class="copyright-content">
