--- a/index.html
+++ b/index.html
@@ -246,27 +246,25 @@
       <div class="container">
           <div class="contacts__info">
             <div class="col-lg-4 contacts__info--navigation">
-              <h3>Links to Stuff</h3>
+              <h3>Tempus consequat</h3>
               <ul>
-                <li><a href="">Lorem ipsum</a></li>
-                <li><a href="">Duis neque nisi</a></li>
-                <li><a href="">apibus sed mattis</a></li>
-                <li><a href="">et quis, nibh.</a></li>
-                <li><a href="">Sed et dapidus </a></li>
-                <li><a href="">isl amet mattis</a></li>
-                <li><a href="">ed a rytrum</a></li>
+                <li><a href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
+                <li><a href="">Sed et blandit consequat sed tlorem blandit</a></li>
+                <li><a href="">Adipiscing feugiat phasellus sed tempus</a></li>
+                <li><a href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
+                <li><a href="">Sem feugiat sapien id suscipit magna felis nec </a></li>
+                <li><a href="">Elit class aptent taciti sociosqu ad litora</a></li>
               </ul>
             </div>
             <div class="col-lg-4 contacts__info--navigation">
-              <h3>More links to Stuff</h3>
+              <h3>Ipsum et phasellus</h3>
               <ul>
-                <li><a href="">accumsan sed. S</a></li>
-                <li><a href="">uis neque nisi, </a></li>
-                <li><a href="">apibus sed mattis et quis, </a></li>
-                <li><a href="">nibh. Sed et dapidus</a></li>
-                <li><a href="">nisl amet mattis</a></li>
-                <li><a href="">utrum accumsan sed</a></li>
-                <li><a href="">utrum accumsan sed</a></li>
+                <li><a href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
+                <li><a href="">Sed et blandit consequat sed tlorem blandit\</a></li>
+                <li><a href="">Adipiscing feugiat phasellus sed tempus</a></li>
+                <li><a href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
+                <li><a href="">Sem feugiat sapien id suscipit magna felis nec</a></li>
+                <li><a href="">Elit class aptent taciti sociosqu ad litora</a></li>
               </ul>
             </div>
             <div class="contacts__social">
@@ -277,7 +275,8 @@
               <a href="" class="fa fa-google-plus fa-3x"></a>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
     <footer class="copyright">
       <div class="copyright-wrap">
         <div class="copyright-content">
