--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
                 <li><a href="">utrum accumsan sed</a></li>
               </ul>
             </div>
-            <div class="contacts__social">
+            <div class="col-lg-4 contacts__social">
+              <h2 class="main-footer__caption">Lorem ipsum dolor sit.</h2>
               <a href="" class="fa fa-twitter fa-3x"></a>
               <a href="" class="fa fa-facebook fa-3x"></a>
               <a href="" class="fa fa-github fa-3x"></a>
