added address in the footer

--- a/index.html
+++ b/index.html
@@ -274,13 +274,24 @@
               <a href="" class="fa fa-github fa-3x"></a>
               <a href="" class="fa fa-linkedin-square fa-3x"></a>
               <a href="" class="fa fa-google-plus fa-3x"></a>
+              <div class="contacts__direction">
+                 <div class="address row">
+                   <h3 class="col-md-2 info__caption">Address</h3>
+                   <p class="col-md-8 col-md-offset-1">Untitled Incorporated 1234 Somewhere Road Suite Nashvie, TN 00000-0000</p>
+                 </div>
+                 <div class="mail row">
+                    <h3 class="col-md-2 info__caption">Mail</h3>
+                    <a class="col-md-8 col-md-offset-1" href="">someone@untited.tld</a>
+                  </div>
+                  <div class="phone row">
+                    <h3 class="col-md-2 info__caption">Phone</h3>
+                    <p class="col-md-8 col-md-offset-1">(800) 000-0000</p>
+                  </div>
+              </div>
             </div>
           </div>
-<<<<<<< HEAD
         </div>
-=======
       </div>
->>>>>>> ae40871a462c937bf97f9527a7b4c11bf31874e0
       </section>
     <footer class="copyright">
       <div class="copyright-wrap">
