Upd footer contact-item

--- a/index.html
+++ b/index.html
@@ -244,27 +244,27 @@
     </div>
     <section class="contacts">
       <div class="container">
-        <div class="contacts__info">
-          <div class="col-lg-4 contacts__info--navigation">
+        <div class="row">
+          <div class="col-lg-4 contacts-info">
             <h2 class="main-footer__caption">Links to Stuff</h2>
             <ul>
-              <li><a class="underline" href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
-              <li><a class="underline" href="">Sed et blandit consequat sed tlorem blandit</a></li>
-              <li><a class="underline" href="">Adipiscing feugiat phasellus sed tempus</a></li>
-              <li><a class="underline" href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
-              <li><a class="underline" href="">Sem feugiat sapien id suscipit magna felis nec </a></li>
-              <li><a class="underline" href="">Elit class aptent taciti sociosqu ad litora</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Sed et blandit consequat sed tlorem blandit</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Adipiscing feugiat phasellus sed tempus</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Sem feugiat sapien id suscipit magna felis nec </a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Elit class aptent taciti sociosqu ad litora</a></li>
             </ul>
           </div>
-          <div class="col-lg-4 contacts__info--navigation">
+          <div class="col-lg-4 contacts-info">
             <h2 class="main-footer__caption">More links to Stuff</h2>
             <ul>
-              <li><a class="underline" href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
-              <li><a class="underline" href="">Sed et blandit consequat sed tlorem blandit</a></li>
-              <li><a class="underline" href="">Adipiscing feugiat phasellus sed tempus</a></li>
-              <li><a class="underline" href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
-              <li><a class="underline" href="">Sem feugiat sapien id suscipit magna felis nec</a></li>
-              <li><a class="underline" href="">Elit class aptent taciti sociosqu ad litora</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Lorem ipsum dolor sit amet sit veroeros</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Sed et blandit consequat sed tlorem blandit</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Adipiscing feugiat phasellus sed tempus</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Hendrerit tortor vitae mattis tempor sapien</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Sem feugiat sapien id suscipit magna felis nec</a></li>
+              <li class="contacts-info__item"><a class="underline" href="">Elit class aptent taciti sociosqu ad litora</a></li>
             </ul>
           </div>
           <div class="col-lg-4 contacts__social">
